--- a/app/styles/ui/_file-diff.scss
+++ b/app/styles/ui/_file-diff.scss
@@ -6,7 +6,8 @@
 }
 
 .diff-text {
-  font-family: monospace;
+  font-family: var(--font-family-monospace);
+  font-size: 11px;
   text-overflow: ellipsis;
   text-align: left;
   text-orientation: upright;
