Hey kid I'm a computer stop adding classes

--- a/app/styles/ui/_file-diff.scss
+++ b/app/styles/ui/_file-diff.scss
@@ -91,12 +91,7 @@
   }
 }
 
-.diff-add,
-.diff-delete,
-.diff-add-selected,
-.diff-delete-selected,
-.diff-hunk,
-.diff-context {
+.diff-line-column {
   display: flex;
   height: 100%;
 }
