Polish delete branch popup

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -33,6 +33,8 @@
   --button-background: $lighterGray;
   --button-hover-background: $white;
 
+  --color-danger: $red;
+
   // Typography
   //
   // Font, line-height, and color for body text, headings, and more.
