--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -13,7 +13,7 @@
   $blue: #4ca6eb;
   $orange: #c9510c;
   $yellow: #d0b44c;
-  $red: #d0b44c;
+  $red: #bf2b00;
   $green: #6cc644;
   $darkGray: #5f717f;
   $gray: #ccc;
