Octicon sizes shouldn't be specified in TS

--- a/app/styles/ui/_octicons.scss
+++ b/app/styles/ui/_octicons.scss
@@ -1,4 +1,7 @@
-/* https://css-tricks.com/cascading-svg-fill-color/ */
 svg.octicon {
+  /* https://css-tricks.com/cascading-svg-fill-color/ */
   fill: currentColor;
+
+  width: 16px;
+  height: 16px;
 }
