--- a/app/styles/_ui.scss
+++ b/app/styles/_ui.scss
@@ -8,6 +8,7 @@
 @import "ui/list";
 @import "ui/repository-list";
 @import "ui/changes-list";
+@import "ui/cloning-repository-view";
 @import "ui/commit-summary";
 @import "ui/commit-list";
 @import "ui/commit-message";
