--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -51,6 +51,7 @@
 
   // Pixel value used to responsively scale all typography. Applied to the `<html>` element.
   --font-size: 13px;
+  --font-size-xl: 32px;
 
   /**
    * Background color for custom scroll bars.
