Position by pixels or else the content will jump around when window width changes

--- a/app/styles/ui/_cloning-repository-view.scss
+++ b/app/styles/ui/_cloning-repository-view.scss
@@ -13,7 +13,7 @@
    * on most platforms (due to our title bar) and it looks
    * better if we position it centered on the ~40% line.
    */
-  margin-top: -10%;
+  margin-top: -60px;
 
   /* Add a ~20px padding around the view to ensure that
    * content doesn't touch the edge of the sideline or
