A little breathing room under the title

--- a/app/styles/ui/_cloning-repository-view.scss
+++ b/app/styles/ui/_cloning-repository-view.scss
@@ -43,6 +43,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+
+    margin-bottom: var(--spacing);
   }
 
   /* Big clone icon */
