--- a/app/styles/_ui.scss
+++ b/app/styles/_ui.scss
@@ -21,6 +21,7 @@
 @import "ui/tab-bar";
 @import "ui/panel";
 @import "ui/popup";
+@import "ui/progress";
 @import "ui/branches";
 @import "ui/add-existing-repository";
 @import "ui/create-repository";
