--- a/app/styles/ui/_buttons.scss
+++ b/app/styles/ui/_buttons.scss
@@ -19,3 +19,15 @@ input[type='submit'] {
     box-shadow: inset 0 0 1px rgba(5, 5, 5, 0.15);
   }
 }
+
+.btn-alt {
+  border: none;
+  border-radius: 2px;
+  background: #4c515a;
+  padding: var(--spacing-half) var(--spacing);
+  box-shadow: 0 0 2px rgba(0,0,0,0.20);
+
+  &:hover {
+    background: #606773;
+  }
+}
