Move colors to variables

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -33,6 +33,11 @@
   --button-background: $lighterGray;
   --button-hover-background: $white;
 
+  --button-alt-background: #4C515A;
+  --button-alt-hover-background: #626875;
+  --button-alt-active-background: #565C66;
+  --button-alt-shadow: rgba(0,0,0,0.20);
+
   // Typography
   //
   // Font, line-height, and color for body text, headings, and more.
