--- a/app/styles/ui/_buttons.scss
+++ b/app/styles/ui/_buttons.scss
@@ -22,28 +22,28 @@ input[type='submit'] {
 
 .btn-alt {
   border: none;
-  border-radius: 2px;
-  background: #4c515a;
+  border-radius: var(--border-radius);
+  background: var(--button-alt-background);
   color: var(--background-color);
   padding: var(--spacing-half) var(--spacing);
-  box-shadow: 0 0 2px rgba(0,0,0,0.20);
+  box-shadow: 0 0 2px var(--button-alt-shadow);
 
   .octicon path {
     fill: var(--alt-background-color);
   }
 
   &:hover {
-    background: #7A8393;
+    background: var(--button-alt-hover-background);
   }
 
   &:active {
-    box-shadow: inset 0 0 2px rgba(55, 58, 65, 0.53);
-    background: #565C66;
+    box-shadow: inset 0 0 2px var(--button-alt-shadow);
+    background: var(--button-alt-active-background);
   }
 }
 
 .btn-icon-only {
-  padding: 5px 8px;
+  padding: var(--spacing-half) var(--spacing);
 
   .octicon {
     vertical-align: text-top;
