--- a/app/styles/ui/_repository-list.scss
+++ b/app/styles/ui/_repository-list.scss
@@ -57,8 +57,12 @@
 .repo-controls {
   text-align: right;
   padding: 0 10px 10px;
-  margin-top: -27px;
   z-index: 2;
+
+  @include darwin {
+    // Moves the "add repo" button closer to the edge of the interace window.
+    margin-top: calc(-1 * calc(var(--darwin-title-bar-height) - var(--spacing)));
+  }
 }
 
 .repository-list-container {
