Break long words in commit summary

--- a/app/styles/ui/_commit-summary.scss
+++ b/app/styles/ui/_commit-summary.scss
@@ -30,6 +30,7 @@
     font-size: 16px;
     font-weight: var(--font-weight-light);
     margin-bottom: var(--spacing-half);
+    word-wrap: break-word;
   }
 
   &-description {
