--- a/app/styles/ui/_sidebar.scss
+++ b/app/styles/ui/_sidebar.scss
@@ -9,7 +9,7 @@
   // Custom color scheme for the sidebar
   //
   // See _variables.scss for documentation on the variables themselves.
-  --text-color: #ccc;
+  --text-color: #eee;
   --background-color: #333;
 
   --scroll-bar-thumb-background-color: rgba(255, 255, 255, 0.2);
