--- a/app/styles/ui/_sidebar.scss
+++ b/app/styles/ui/_sidebar.scss
@@ -9,6 +9,7 @@
   // Custom color scheme for the sidebar
   //
   // See _variables.scss for documentation on the variables themselves.
+  --font-size: 12px;
   --text-color: #eee;
   --background-color: #333;
 
@@ -26,6 +27,7 @@
   // the variables.
   color: var(--text-color);
   background-color: var(--background-color);
+  font-size: var(--font-size);
 }
 
 /* Sidebar negative margin hackery
