--- a/app/styles/ui/_commit-list.scss
+++ b/app/styles/ui/_commit-list.scss
@@ -34,13 +34,13 @@
     }
 
     .avatar {
-      width: 48px;
-      height: 48px;
+      width: 32px;
+      height: 32px;
       flex-shrink: 0;
 
-      border-radius: 4px;
+      border-radius: var(--border-radius);
       align-self: center;
-      margin-left: 7px;
+      margin-left: var(--spacing-half);
     }
 
     .info {
@@ -48,7 +48,7 @@
       flex-direction: column;
       overflow: hidden;
       margin: auto 0;
-      margin-left: 4px;
+      margin-left: var(--spacing-half);
 
       .summary {
         text-overflow: ellipsis;
