--- a/app/styles/ui/_toolbar.scss
+++ b/app/styles/ui/_toolbar.scss
@@ -7,4 +7,9 @@
   flex-shrink: 0;
   height: 34px;
   align-items: center;
+
+  @include darwin {
+    margin-top: calc(var(--spacing-double) * -1);
+    z-index: 2;
+  }
 }
