--- a/app/styles/ui/_tab-bar.scss
+++ b/app/styles/ui/_tab-bar.scss
@@ -1,16 +1,14 @@
 .tab-bar {
 
   &-item {
-    --border-radius: 5px;
-
     background: var(--tab-bar-background-color);
+    box-shadow: inset 0 0 0 1px #D6D6D6;
 
     // This makes it so that we never render a double-width item border.
     // It has the unintended consequence of making it impossible to have a tab
     // bar with just one item but we can live with that.
     border-right-width: 0;
-    padding: 5px 20px;
-    margin-right: 1px;
+    padding: 3px 25px;
 
     &:first-child {
       border-radius: var(--border-radius) 0px 0px var(--border-radius);
@@ -27,6 +25,7 @@
     // one.
     &.selected {
       background-color: var(--tab-bar-active-color);
+      box-shadow: none;
       color: var(--box-selected-background-color);
 
       .indicator {
