Adjust list border color

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -83,6 +83,7 @@
    */
   --box-border-color: $gray;
   --box-border-accent-color: $blue;
+  --box-border-light-color: #DFDFDF;
 
   /**
    * Background color for selected boxes without keyboard focus
@@ -127,6 +128,7 @@
 
   --border-radius: 3px;
   --base-border: 1px solid var(--box-border-color);
+  --light-border: 1px solid var(--box-border-light-color);
 
   --tab-bar-active-color: #3D76C2;
   --tab-bar-background-color: #EDEDED;
