--- a/app/styles/ui/_changes-list.scss
+++ b/app/styles/ui/_changes-list.scss
@@ -35,7 +35,7 @@
 
   .list-item {
     padding: var(--spacing-half);
-    border-bottom: var(--base-border);
+    border-bottom: var(--light-border);
   }
 }
 
