--- a/app/styles/ui/_commit-list.scss
+++ b/app/styles/ui/_commit-list.scss
@@ -8,7 +8,7 @@
     width: 100%;
     height: 100%;
 
-    border-bottom: var(--base-border);
+    border-bottom: var(--light-border);
     padding-left: 2px;
 
     &.facade {
