use already declared alt background color

--- a/app/styles/ui/_changes-list.scss
+++ b/app/styles/ui/_changes-list.scss
@@ -16,7 +16,7 @@
 
 .changes-panel {
   &-header {
-    background: var(--alt-background-color);
+    background: var(--box-alt-background-color);
     border-bottom: 1px solid var(--box-border-color);
     display: flex;
     padding: var(--spacing-half);
