--- a/app/styles/_globals.scss
+++ b/app/styles/_globals.scss
@@ -99,7 +99,7 @@ button {
 }
 
 .blankslate {
-  background: var(--alt-background-color);
+  background: var(--box-alt-background-color);
   display: flex;
   flex: 1;
   align-items: center;
