--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -129,7 +129,8 @@
   --base-border: 1px solid var(--box-border-color);
   --light-border: 1px solid var(--box-border-light-color);
 
-  --base-box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+  --shadow-color: rgba(0,0,0,0.1);
+  --base-box-shadow: 0 1px 2px var(--shadow-color);
 
   --tab-bar-active-color: #3D76C2;
   --tab-bar-background-color: #EDEDED;
