--- a/app/styles/ui/_file-diff.scss
+++ b/app/styles/ui/_file-diff.scss
@@ -50,7 +50,7 @@
   text-align: right;
 }
 
-.diff-add {
+pre.diff-add {
   background: var(--diff-add-background-color);
 
   .diff-line-number {
@@ -58,7 +58,7 @@
   }
 }
 
-.diff-delete {
+pre.diff-delete {
   background: var(--diff-delete-background-color);
 
   .diff-line-number {
@@ -66,7 +66,7 @@
   }
 }
 
-.diff-hunk {
+pre.diff-hunk {
   background: var(--diff-hunk-background-color);
 
   .diff-line-number {
