--- a/app/styles/ui/_commit-summary.scss
+++ b/app/styles/ui/_commit-summary.scss
@@ -20,9 +20,9 @@
 }
 
 .commit-summary {
-  &-header,
+  &-title,
+  &-meta,
   &-description {
-    border-bottom: 1px solid var(--box-border-color);
     padding: var(--spacing);
   }
 
@@ -30,11 +30,15 @@
     font-size: 16px;
     font-weight: var(--font-weight-light);
     margin-bottom: var(--spacing-half);
+    padding: var(--spacing) var(--spacing) 0;
     word-wrap: break-word;
   }
 
   &-description {
+    background: var(--box-alt-background-color);
+    border-top: var(--light-border);
     font-family: var(--font-family-monospace);
+    font-size: 11px;
     word-wrap: break-word;
 
     &:empty {
@@ -46,7 +50,7 @@
     display: flex;
     list-style: none;
     margin: 0;
-    padding: 0;
+    padding: 0 10px 10px;
   }
 
   &-meta-item {
@@ -62,7 +66,7 @@
 
   &-header {
     box-shadow: var(--base-box-shadow);
-    
+    border-bottom: var(--light-border);
     // Render the shadow on top of the list
     z-index: 2;
   }
