--- a/app/styles/ui/_commit-summary.scss
+++ b/app/styles/ui/_commit-summary.scss
@@ -21,24 +21,21 @@
 
 .commit-summary {
   &-title,
-  &-meta,
-  &-description {
+  &-meta {
     padding: var(--spacing);
   }
 
   &-title {
     font-size: 16px;
     font-weight: var(--font-weight-light);
-    margin-bottom: var(--spacing-half);
-    padding: var(--spacing) var(--spacing) 0;
+    padding: var(--spacing);
     word-wrap: break-word;
   }
 
   &-description {
-    background: var(--box-alt-background-color);
-    border-top: var(--light-border);
     font-family: var(--font-family-monospace);
     font-size: 11px;
+    padding: 0 var(--spacing) var(--spacing);
     word-wrap: break-word;
 
     &:empty {
