Make it stand out better against a background

--- a/app/styles/ui/_autocompletion.scss
+++ b/app/styles/ui/_autocompletion.scss
@@ -12,4 +12,8 @@
   height: 100px;
 
   background-color: white;
+  border: var(--base-border);
+  border-radius: var(--border-radius);
+
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
 }
