Repository shouldn't expand further than it's got

--- a/app/styles/ui/_repository.scss
+++ b/app/styles/ui/_repository.scss
@@ -5,4 +5,11 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+
+  /* See https://css-tricks.com/flexbox-truncated-text/
+   * We need to do this "hack" or else the container will
+   * always grow to fit the intrinsic width of its children
+   * and thus killing our text truncation in the title.
+   */
+  min-width: 0;
 }
