Use the standard background color

--- a/app/styles/ui/_autocompletion.scss
+++ b/app/styles/ui/_autocompletion.scss
@@ -11,7 +11,7 @@
   width: 200px;
   height: 100px;
 
-  background-color: white;
+  background-color: var(--background-color);
   border: var(--base-border);
   border-radius: var(--border-radius);
 
