--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -17,8 +17,7 @@
   $green: #6cc644;
   $darkGray: #5f717f;
   $gray: #ccc;
-  $lightGray: #f2f2f2;
-  $lighterGray: #f9f9f9;
+  $lightGray: #f9f9f9;
   $white: #fff;
 
   --color-new: $green;
@@ -29,7 +28,7 @@
   --background-color: $white;
 
 
-  --button-background: $lighterGray;
+  --button-background: $lightGray;
   --button-hover-background: $white;
 
   // Typography
@@ -75,7 +74,7 @@
   // or an item in a tab control header. It's up to each implementation
   // to decide what states to support (active selection, selection, etc).
 
-  --box-alt-background-color: $lighterGray;
+  --box-alt-background-color: $lightGray;
 
   /**
    * Border color for boxes.
@@ -107,7 +106,7 @@
   /**
    * Text color for selected boxes with active keyboard focus
    */
-  --box-selected-active-text-color: $lighterGray;
+  --box-selected-active-text-color: $lightGray;
 
   /**
    * Border color for selected boxes with active keyboard focus
