--- a/app/styles/ui/_repository-list.scss
+++ b/app/styles/ui/_repository-list.scss
@@ -51,6 +51,6 @@
   .repository-group-label {
     opacity: 0.6;
     padding: 0 5px 0 20px;
-    margin-top: var(--spacing-half);
+    margin-top: var(--spacing);
   }
 }
