--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -49,6 +49,8 @@
 
   // Pixel value used to responsively scale all typography. Applied to the `<html>` element.
   --font-size: 13px;
+  --font-size-sm: 11px;
+  --font-size-md: 16px;
   --font-size-xl: 32px;
 
   /**
