--- a/app/styles/ui/_commit-summary.scss
+++ b/app/styles/ui/_commit-summary.scss
@@ -26,7 +26,7 @@
   }
 
   &-title {
-    font-size: 16px;
+    font-size: var(--font-size-md);
     font-weight: var(--font-weight-light);
     padding: var(--spacing);
     word-wrap: break-word;
@@ -34,7 +34,7 @@
 
   &-description {
     font-family: var(--font-family-monospace);
-    font-size: 11px;
+    font-size: var(--font-size-sm);
     padding: 0 var(--spacing) var(--spacing);
     word-wrap: break-word;
 
