--- a/app/styles/ui/_commit-summary.scss
+++ b/app/styles/ui/_commit-summary.scss
@@ -47,7 +47,7 @@
     display: flex;
     list-style: none;
     margin: 0;
-    padding: 0 10px 10px;
+    padding: 0 var(--spacing) var(--spacing);
   }
 
   &-meta-item {
