Show some line hover effects

--- a/app/styles/ui/_file-diff.scss
+++ b/app/styles/ui/_file-diff.scss
@@ -92,11 +92,18 @@ pre.diff-hunk {
   }
 }
 
+.diff-add-hover,
+.diff-delete-hover {
+  background: var(--diff-hover-background-color);
+  border-color: var(--diff-hover-border-color);
+  color: var(--background-color);
+}
+
 .CodeMirror-gutters .before,
 .CodeMirror-gutters .after {
   background: var(--diff-hunk-background-color);
   border-right: 1px solid var(--diff-border-color);
-  width: 2em;
+  width: 50px;
 }
 
 .diff-line-number {
