--- a/app/styles/ui/_file-diff.scss
+++ b/app/styles/ui/_file-diff.scss
@@ -74,8 +74,7 @@ pre.diff-hunk {
   }
 }
 
-.diff-add-selected,
-.diff-delete-selected {
+.diff-line-selected {
   .diff-line-number {
     background: var(--diff-selected-background-color);
     border-color: var(--diff-selected-border-color);
@@ -83,8 +82,7 @@ pre.diff-hunk {
   }
 }
 
-.diff-add-hover,
-.diff-delete-hover {
+.diff-line-hover {
   .diff-line-number {
     background: var(--diff-hover-background-color);
     border-color: var(--diff-hover-border-color);
@@ -92,23 +90,13 @@ pre.diff-hunk {
   }
 }
 
-.diff-add-hover,
-.diff-delete-hover {
-  background: var(--diff-hover-background-color);
-  border-color: var(--diff-hover-border-color);
-  color: var(--background-color);
-}
-
-.CodeMirror-gutters .before,
-.CodeMirror-gutters .after {
-  background: var(--diff-hunk-background-color);
-  border-right: 1px solid var(--diff-border-color);
-  width: 50px;
-}
-
 .diff-line-number {
   color: var(--diff-line-number-color);
   width: var(--diff-line-number-column-width);
   text-align: left;
   padding-left: 5px;
+}
+
+.diff-gutter {
+  width: 100px;
 }
