--- a/app/styles/ui/_autocompletion.scss
+++ b/app/styles/ui/_autocompletion.scss
@@ -25,6 +25,14 @@
   height: 100%;
   min-width: 0;
 
+  /* Used to highlight substring matches in autocompletion texts */
+  mark {
+    font-weight: bold;
+    /* Reset browser defaults */
+    background-color: inherit;
+    color: currentColor;
+  }
+
   .emoji {
 
     display: flex;
