--- a/app/styles/ui/_file-diff.scss
+++ b/app/styles/ui/_file-diff.scss
@@ -3,7 +3,17 @@
 /** A React component holding a file diff */
 #file-diff {
   text-align: left;
-  width: 100px;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+
+.CodeMirror {
+  height: auto;
+}
+
+.CodeMirror-lines {
+  padding: 0;
 }
 
 .diff-text {
