s/file-diff/diff

--- a/app/styles/_ui.scss
+++ b/app/styles/_ui.scss
@@ -13,7 +13,7 @@
 @import "ui/commit-list";
 @import "ui/commit-message";
 @import "ui/comparison-graph";
-@import "ui/file-diff";
+@import "ui/diff";
 @import "ui/history";
 @import "ui/repository";
 @import "ui/resizable";
