--- a/app/styles/ui/_diff.scss
+++ b/app/styles/ui/_diff.scss
@@ -1,7 +1,7 @@
 @import "../mixins";
 
-/** A React component holding a file diff */
-#file-diff {
+/** A React component holding a diff */
+#diff {
   text-align: left;
   width: 100%;
   height: 100%;
