Let window control buttons pick up the svg color from the environment
It's just easier to deal with one attribute

--- a/app/styles/ui/window/_title-bar.scss
+++ b/app/styles/ui/window/_title-bar.scss
@@ -89,7 +89,7 @@
       // on hover and slightly lighter red on active.
       &.close:hover {
         background-color: #e81123;
-        fill: #fff;
+        color: #fff;
 
         &:active {
           background-color: #f1707a;
@@ -98,6 +98,9 @@
 
       svg {
         position: absolute;
+
+        /* https://css-tricks.com/cascading-svg-fill-color/ */
+        fill: currentColor;
 
         // These may seem arbitrary but in an uneven 45x29 box
         // this positions the 10x10 icons centered but rounded
