Make sure summary input shrinks properly

--- a/app/styles/ui/_commit-message.scss
+++ b/app/styles/ui/_commit-message.scss
@@ -18,6 +18,8 @@
     .summary-field {
       flex: 1;
       margin-bottom: var(--spacing);
+
+      input { width: 100%; }
     }
 
     .avatar {
