Use mixin for truncation

--- a/app/styles/ui/_commit-list.scss
+++ b/app/styles/ui/_commit-list.scss
@@ -52,9 +52,7 @@
       margin-left: var(--spacing);
 
       .summary {
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        overflow: hidden;
+        @include ellipsis
       }
     }
   }
