Truncate byline in commit list when space is scarce

--- a/app/styles/ui/_commit-list.scss
+++ b/app/styles/ui/_commit-list.scss
@@ -51,9 +51,7 @@
       margin: auto 0;
       margin-left: var(--spacing);
 
-      .summary {
-        @include ellipsis
-      }
+      .summary, .byline { @include ellipsis }
     }
   }
 }
