Fix change type icon color on focused list items

--- a/app/styles/ui/_changes-list.scss
+++ b/app/styles/ui/_changes-list.scss
@@ -39,6 +39,18 @@
   }
 }
 
+// Only use special colors for the change type icons when
+// the list item doesn't have active focus. If it does we
+// fall back to using the ambient foreground color of the
+// list item.
+#changes-list-list .list-item:not(:focus) {
+  .status {
+    &-new .octicon { fill: var(--color-new); }
+    &-modified .octicon { fill: var(--color-modified); }
+    &-deleted .octicon { fill: var(--color-deleted); }
+  }
+}
+
 .changed-file {
   display: flex;
   flex-grow: 1;
@@ -51,12 +63,6 @@
   .path {
     flex-grow: 1;
     @include ellipsis;
-  }
-
-  .status {
-    &-new .octicon { fill: var(--color-new); }
-    &-modified .octicon { fill: var(--color-modified); }
-    &-deleted .octicon { fill: var(--color-deleted); }
   }
 
   .octicon {
