--- a/app/styles/ui/_diff.scss
+++ b/app/styles/ui/_diff.scss
@@ -13,6 +13,31 @@
   font-family: --var(font-family-monospace);
 }
 
+// Windows has custom scroll bars, see _scroll.scss
+@include win32-context {
+  .CodeMirror {
+    // Mirror the behavior of other scroll bars in desktop on Windows
+    // and only show them while hovering over the scroll container.
+    // We can't use display here since that's set as an inline style
+    // by CodeMirror so we'll resort to the old opacity hack.
+    .CodeMirror-vscrollbar,
+    .CodeMirror-hscrollbar {
+      opacity: 0;
+    }
+
+    &:hover {
+      .CodeMirror-vscrollbar,
+      .CodeMirror-hscrollbar {
+        opacity: 1;
+      }
+    }
+
+    // This is a div that sits in the corner between the horizontal
+    // and vertical scroll bar and has an opaque background by default.
+    .CodeMirror-scrollbar-filler { background: transparent; }
+  }
+}
+
 .CodeMirror-lines {
   padding: 0;
 }
