--- a/app/styles/ui/_changes-list.scss
+++ b/app/styles/ui/_changes-list.scss
@@ -22,7 +22,7 @@
     padding: var(--spacing-half);
 
     // Render the shadow on top of the list
-    z-index: 2;
+    z-index: calc(var(--popup-z-index) - 1);
   }
 
   &-header-input {
